[tool.poetry]
name = "artemis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.1"
numpy = "^1.23.4"
scikit-learn = "^1.1.3"
seaborn = "^0.12.1"
ipykernel = "^6.17.0"
tqdm = "^4.64.1"
networkx = "^2.8.8"

[tool.poetry.dev-dependencies]
black = {version = "^22.10.0", allow-prereleases = true}
xgboost = "^1.7.1"
lightgbm = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
