[tool.poetry]
name = "pyartemis"
packages = [
    { include = "artemis" }
]
version = "0.1.3"
description = "A library for explanations of feature interactions in machine learning models."
readme = "README.md"
documentation = "https://pyartemis.github.io/"
keywords = ["interactions", "xai", "Explainable Artificial Intelligence", "explanations", "machine learning", "iml", "Interpretable Machine Learning"]
authors = ["Artur Żółkowski <artur.zolkowski@wp.pl>", "Mateusz Krzyziński <krzyzinskimateusz23@gmail.com>", "Paweł Fijałkowski <pablo2811@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.1"
numpy = "^1.22.0"
scikit-learn = "^1.1.3"
seaborn = "^0.12.1"
ipykernel = "^6.17.0"
tqdm = "^4.64.1"
networkx = "^2.8.8"

[tool.poetry.dev-dependencies]
black = {version = "^22.10.0", allow-prereleases = true}
xgboost = "^1.7.1"
lightgbm = "^3.2.0"
parameterized = "^0.8.1"
pytest = "^7.2.0"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
